--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     })
 
     compile 'com.google.code.gson:gson:2.8.0'
+
+    compile 'io.reactivex.rxjava2:rxjava:2.0.6'
 }
 repositories {
     mavenCentral()
